--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar navbar-color">
         <a href="#">Home</a>
         <a href="nature.html">Nature</a>
         <a href="stair.html">Stair</a>
     </div>
-    <div class="container">
+    <div class="container container-color">
         <div class="circle-box">
             <div class="circle"></div>
             <div class="circle"></div>
